# cutout_flutter

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/com/grandeclip/cutout/: CutoutPlugin.java
android/src/main/kotlin/com/grandeclip/cutout/: CutoutPlugin.kt
android/src/test/kotlin/com/grandeclip/cutout/: CutoutPluginTest.kt
example/: .gitattributes  README.md  pubspec.yaml
example/android/: gradle.properties
example/android/app/: build.gradle
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart  routes.dart
example/lib/screens/: home_screen.dart  sam_screen.dart  u2net_screen.dart
example/test/: widget_test.dart
ios/: cutout.podspec
ios/Classes/: CutoutPlugin.h  CutoutPlugin.m  CutoutPlugin.swift  sam.cpp  u2net.cpp
ios/opencv2.framework/Headers/: Imgcodecs.h
ios/opencv2.framework/Modules/opencv2.swiftmodule/: arm64-apple-ios.swiftmodule  armv7.swiftmodule  armv7s.swiftmodule  x86_64-apple-ios-simulator.swiftmodule
ios/opencv2.framework/Resources/: Info.plist
lib/: cutout.dart  cutout_binding.dart  cutout_method_channel.dart  cutout_platform_interface.dart
lib/models/: isolate_helper.dart  sam_model.dart  u2net_model.dart
script/: set_opencv.sh
test/: cutout_method_channel_test.dart  cutout_test.dart
(+21 files in other folders)
